switch to releasing to mvn central